--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
   
 
     <!-- mobile-menu---------- -->
-<div class="mobile-menu">
+<!-- <div class="mobile-menu">
   <button type="button" class="modal-btn">
     <svg class="mobile-close-icon" width="8" height="8">
       <use href="./images/icons.svg#icon-close"></use>
@@ -583,7 +583,7 @@
 </ul>
   </div>
   
-</div>
+</div> -->
 
 
 <!-- modal-window-------------------- -->
