--- a/index.html
+++ b/index.html
@@ -568,22 +568,68 @@
     </footer>
   
 
-    <!-- mobile-menu---------- -->
-<!-- <div class="mobile-menu">
-  <button type="button" class="modal-btn">
-    <svg class="mobile-close-icon" width="8" height="8">
-      <use href="./images/icons.svg#icon-close"></use>
-    </svg>
-  </button>
-  <div class="menu-container">
-<ul class="mobile-menu-list">
-  <li><a href="./index.html" class="menu-item">Studio</a></li>
-  <li><a href="" class="menu-item">Portfolio</a></li>
-  <li><a href="" class="menu-item">Contacts</a></li>
-</ul>
+  <!--  mobile-menu---------- -->
+<div class="mobile-menu is-open">
+
+  <div class="mobile-contaner1">
+    <button type="button" class="modal-btn">
+      <svg class="mobile-close-icon" width="8" height="8">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    
+  <ul class="mobile-menu-list">
+    <li><a href="./index.html" class="menu-item">Studio</a></li>
+    <li><a href="" class="menu-item">Portfolio</a></li>
+    <li><a href="" class="menu-item">Contacts</a></li>
+  </ul>
   </div>
+
+<div class="mobile-container2">
+  <address class="menu-contacts">
+    <ul class="menu-contacts-list">
+      <li>
+        <a href="tel:+110001111111" class="menu-address-text">+11 (000) 111-11-11</a>
+      </li>
+      <li>
+        <a href="mailto:info@devstudio.com" class="menu-address-text">info@devstudio.com</a>
+      </li>
+    </ul>
+  </address>
   
-</div> -->
+  <ul class="footer-social-links mobile-links">
+    <li class="footer-ellipse">
+      <a href="https://www.instagram.com/" class="footer-ellipse-link">
+        <svg class="team-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-ellipse">
+      <a href="https://uk-ua.facebook.com/" class="footer-ellipse-link">
+        <svg class="team-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-ellipse">
+      <a href="https://twitter.com/?lang=uk" class="footer-ellipse-link">
+        <svg class="team-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="footer-ellipse">
+      <a href="https://www.linkedin.com/" class="footer-ellipse-link">
+        <svg class="team-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</div>
+  
+</div>
 
 
 <!-- modal-window-------------------- -->
