--- a/index.html
+++ b/index.html
@@ -569,10 +569,10 @@
   
 
   <!--  mobile-menu---------- -->
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
 
   <div class="mobile-contaner1">
-    <button type="button" class="modal-btn">
+    <button type="button" class="mobile-btn">
       <svg class="mobile-close-icon" width="8" height="8">
         <use href="./images/icons.svg#icon-close"></use>
       </svg>
