--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     </button>
     
   <ul class="mobile-menu-list">
-    <li><a href="./index.html" class="menu-item">Studio</a></li>
+    <li><a href="./index.html" class="menu-item menu-item-active">Studio</a></li>
     <li><a href="" class="menu-item">Portfolio</a></li>
     <li><a href="" class="menu-item">Contacts</a></li>
   </ul>
